# aws-credentials-clipboard-updater

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  aws-credentials-clipboard-updater.rb  demo.tape  pyproject.toml  setup.py
docs/: index.html  style.css
src/: awscreds.py
src/aws_credentials_clipboard_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/awscreds/: __init__.py  cli.py
test/: test_awscreds.py
